--- a/ClusterKit.Web/ClusterKit.Web.Client/ClusterKit.Web.Client.csproj
+++ b/ClusterKit.Web/ClusterKit.Web.Client/ClusterKit.Web.Client.csproj
@@ -39,6 +39,10 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\ClusterKit.Security\ClusterKit.Security.Client\ClusterKit.Security.Client.csproj">
+      <Project>{25e3b4dc-717e-4eca-a756-3112e2093cff}</Project>
+      <Name>ClusterKit.Security.Client</Name>
+    </ProjectReference>
     <Reference Include="Akka, Version=1.1.3.31, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\packages\Akka.1.1.3\lib\net45\Akka.dll</HintPath>
@@ -143,7 +147,7 @@
     <ProjectReference Include="../.././ClusterKit.Core/ClusterKit.Core/ClusterKit.Core.csproj">
       <Project>{BA97BEED-B078-499D-8C00-6A3D4A0635F2}</Project>
       <Name>ClusterKit.Core</Name>
-</ProjectReference>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Client.cs" />
