--- a/ClusterKit.Monitoring/ClusterKit.Monitoring/ClusterKit.Monitoring.csproj
+++ b/ClusterKit.Monitoring/ClusterKit.Monitoring/ClusterKit.Monitoring.csproj
@@ -33,14 +33,6 @@
     <DocumentationFile>bin\Release\ClusterKit.Monitoring.XML</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\ClusterKit.Security\ClusterKit.Security.Client\ClusterKit.Security.Client.csproj">
-      <Project>{25e3b4dc-717e-4eca-a756-3112e2093cff}</Project>
-      <Name>ClusterKit.Security.Client</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\ClusterKit.Web\ClusterKit.Web.Authorization\ClusterKit.Web.Authorization.csproj">
-      <Project>{6adfbddf-e452-46fc-a037-6d57300be561}</Project>
-      <Name>ClusterKit.Web.Authorization</Name>
-    </ProjectReference>
     <ProjectReference Include="..\ClusterKit.Monitoring.Client\ClusterKit.Monitoring.Client.csproj">
       <Project>{f3216b61-26c8-4ad6-84df-4531d4c568a2}</Project>
       <Name>ClusterKit.Monitoring.Client</Name>
@@ -174,7 +166,6 @@
       <HintPath>..\..\packages\System.Collections.Immutable.1.3.1\lib\portable-net45+win8+wp8+wpa81\System.Collections.Immutable.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Core" />
     <Reference Include="System.IO.Compression" />
     <Reference Include="System.Net.Http.Formatting, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
@@ -232,32 +223,26 @@
       <HintPath>..\..\packages\Microsoft.AspNet.WebPages.3.2.3\lib\net45\System.Web.WebPages.Razor.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
     <ProjectReference Include="../.././ClusterKit.Core/ClusterKit.Core/ClusterKit.Core.csproj">
       <Project>{BA97BEED-B078-499D-8C00-6A3D4A0635F2}</Project>
       <Name>ClusterKit.Core</Name>
-    </ProjectReference>
-    <ProjectReference Include="../.././ClusterKit.Web/ClusterKit.Web.Client/ClusterKit.Web.Client.csproj">
-      <Project>{8E543EA4-65DE-475F-8045-C094CDE58E29}</Project>
-      <Name>ClusterKit.Web.Client</Name>
-    </ProjectReference>
+</ProjectReference>
     <ProjectReference Include="../.././ClusterKit.Web/ClusterKit.Web/ClusterKit.Web.csproj">
       <Project>{477B201A-A30C-4360-B56A-6F61C049BB04}</Project>
       <Name>ClusterKit.Web</Name>
-    </ProjectReference>
+</ProjectReference>
     <ProjectReference Include="../.././ClusterKit.LargeObjects/ClusterKit.LargeObjects.Client/ClusterKit.LargeObjects.Client.csproj">
       <Project>{7DE19EFC-58C5-4DBF-8A2A-E81E54AF5623}</Project>
       <Name>ClusterKit.LargeObjects.Client</Name>
-    </ProjectReference>
+</ProjectReference>
     <ProjectReference Include="../.././ClusterKit.LargeObjects/ClusterKit.LargeObjects/ClusterKit.LargeObjects.csproj">
       <Project>{261DFDC5-5107-41B5-A8F4-A34F84D22931}</Project>
       <Name>ClusterKit.LargeObjects</Name>
-    </ProjectReference>
+</ProjectReference>
+    <ProjectReference Include="../.././ClusterKit.Web/ClusterKit.Web.Authorization/ClusterKit.Web.Authorization.csproj">
+      <Project>{6ADFBDDF-E452-46FC-A037-6D57300BE561}</Project>
+      <Name>ClusterKit.Web.Authorization</Name>
+</ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Actors\ClusterScanActor.cs" />
