--- a/ClusterKit.Web/ClusterKit.Web.Tests/ClusterKit.Web.Tests.csproj
+++ b/ClusterKit.Web/ClusterKit.Web.Tests/ClusterKit.Web.Tests.csproj
@@ -117,6 +117,7 @@
       <HintPath>..\..\packages\Google.ProtocolBuffers.2.4.1.555\lib\net40\Google.ProtocolBuffers.Serialization.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="GraphQL, Version=0.14.6.657, Culture=neutral, PublicKeyToken=null" />
     <Reference Include="Helios, Version=2.1.3.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Helios.2.1.3\lib\net45\Helios.dll</HintPath>
       <Private>True</Private>
@@ -216,19 +217,21 @@
     <ProjectReference Include="../.././ClusterKit.Core/ClusterKit.Core/ClusterKit.Core.csproj">
       <Project>{BA97BEED-B078-499D-8C00-6A3D4A0635F2}</Project>
       <Name>ClusterKit.Core</Name>
-</ProjectReference>
+    </ProjectReference>
     <ProjectReference Include="../.././ClusterKit.Core/ClusterKit.Core.TestKit/ClusterKit.Core.TestKit.csproj">
       <Project>{33F25E93-E58E-4F90-A6EB-E7C64546D732}</Project>
       <Name>ClusterKit.Core.TestKit</Name>
-</ProjectReference>
+    </ProjectReference>
     <ProjectReference Include="../.././ClusterKit.Security/ClusterKit.Security.Client/ClusterKit.Security.Client.csproj">
       <Project>{25E3B4DC-717E-4ECA-A756-3112E2093CFF}</Project>
       <Name>ClusterKit.Security.Client</Name>
-</ProjectReference>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Auth\AuthenticationTests.cs" />
     <Compile Include="Auth\AuthorizationTests.cs" />
+    <Compile Include="GraphQL\GraphQlControllerTests.cs" />
+    <Compile Include="GraphQL\SchemeGeneratorTests.cs" />
     <Compile Include="NginxConfiguratorTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SwaggerDescriptorTest.cs" />
@@ -255,6 +258,18 @@
     <ProjectReference Include="..\ClusterKit.Web.Descriptor\ClusterKit.Web.Descriptor.csproj">
       <Project>{39ca45b9-b12c-48c6-b2f6-1355f151bdcc}</Project>
       <Name>ClusterKit.Web.Descriptor</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ClusterKit.Web.GraphQL.API\ClusterKit.Web.GraphQL.API.csproj">
+      <Project>{3ef91b78-723a-445a-92c3-4c0b48fbce9d}</Project>
+      <Name>ClusterKit.Web.GraphQL.API</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ClusterKit.Web.GraphQL.Client\ClusterKit.Web.GraphQL.Client.csproj">
+      <Project>{f9757ef8-1bb7-4a3e-84e0-57e2f8255ea1}</Project>
+      <Name>ClusterKit.Web.GraphQL.Client</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ClusterKit.Web.GraphQL.Publisher\ClusterKit.Web.GraphQL.Publisher.csproj">
+      <Project>{45219cb4-7189-49c6-a95b-aebbaed4645e}</Project>
+      <Name>ClusterKit.Web.GraphQL.Publisher</Name>
     </ProjectReference>
     <ProjectReference Include="..\ClusterKit.Web.NginxConfigurator\ClusterKit.Web.NginxConfigurator.csproj">
       <Project>{81cb9b1a-25b1-46a8-8806-0bcf5595386e}</Project>
